# Claude-Scanner

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
benchmarks/linux/: cis_level1.yaml
benchmarks/macos/: cis_level1.yaml
benchmarks/windows/: cis_level1.yaml
cli/: main.py
cmd/agent/: main.go
cmd/netscanner/: main.go
deploy/: .env.example  Dockerfile.server  Dockerfile.web  alembic.ini  docker-compose.yml
internal/collector/: collector.go  darwin.go  linux.go  unix.go  windows.go
internal/models/: models.go
internal/network/: scanner.go  ssl_inspector.go
server/: config.py  main.py
server/api/: deps.py
server/api/routes/: auth.py  devices.py  reports.py  scans.py  vulnerabilities.py
server/core/: audit.py  credentials.py  enrichment.py  scan_engine.py
server/core/parsers/: __init__.py  base.py  darwin_parser.py  ibmi_parser.py  linux_parser.py  unix_parser.py  windows_parser.py
server/core/transport/: __init__.py  base.py  ssh_transport.py  winrm_transport.py
server/db/: __init__.py  database.py  models.py
server/db/migrations/: env.py
server/reports/: csv_gen.py  pdf_gen.py
server/tasks/: celery_app.py  discovery_tasks.py  enrichment_tasks.py  scan_tasks.py
web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx
web/src/components/: Layout.tsx  SeverityBadge.tsx
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  Devices.tsx  Findings.tsx  Login.tsx  ScanDetail.tsx  Scans.tsx  Vulnerabilities.tsx
web/src/types/: index.ts
(+2 files in other folders)
