[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-scanner"
version = "0.1.0"
description = "Enterprise-grade vulnerability scanner for fleet device management"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",

    # HTTP client
    "httpx>=0.27.0",

    # 1Password Connect
    "onepasswordconnectsdk>=1.3.0",

    # SSH transport
    "paramiko>=3.4.0",
    "asyncssh>=2.14.2",

    # WinRM transport
    "pywinrm>=0.4.3",

    # Task queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.3",

    # Reports
    "reportlab>=4.1.0",

    # CLI
    "typer[all]>=0.12.1",
    "rich>=13.7.1",

    # Utilities
    "python-dateutil>=2.9.0",
    "ipaddress>=1.0.23",
    "netaddr>=1.2.1",
    "cpe>=1.2.1",
]

[project.scripts]
claude-scanner = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
